# imserver-sdk-python

./: README.md  README_zh.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: main.py
juggleimsdk/: __init__.py  _base.py  app.py  binddevice.py  bot.py  chatroom.py  client.py  conversation.py  friend.py  group.py  hismsg.py  message.py  moment.py  mute.py  publicchannel.py  push.py  sensitive.py  user.py  util.py
tests/: test_client.py  test_util.py
