[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imserver-sdk-python"
version = "1.0.0"
description = "Python SDK for JuggleIM Server API"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "JuggleIM" }]
keywords = ["juggleim", "im", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/juggleim/imserver-sdk-python"
Documentation = "https://www.juggle.im/docs/server/api/"
Source = "https://github.com/juggleim/imserver-sdk-python"
Issues = "https://github.com/juggleim/imserver-sdk-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["juggleimsdk*"]
